--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,36 +1,29 @@
 
-akka {
-  # Loggers to register at boot time (akka.event.Logging$DefaultLogger logs
-  # to STDOUT)
-  loggers = ["akka.event.Logging$DefaultLogger"]
-  # Options: OFF, ERROR, WARNING, INFO, DEBUG
-  loglevel = "DEBUG"
+durian {
+  akka {
+    # Loggers to register at boot time (akka.event.Logging$DefaultLogger logs
+    # to STDOUT)
+    loggers = ["akka.event.Logging$DefaultLogger"]
+    # Options: OFF, ERROR, WARNING, INFO, DEBUG
+    loglevel = "DEBUG"
 
-  actor {
-    provider = "akka.cluster.ClusterActorRefProvider"
-  }
-  remote {
-    log-remote-lifecycle-events = off
-    netty.tcp {
-      hostname = "127.0.0.1"
-      port = 3000
+    actor {
+      provider = "akka.cluster.ClusterActorRefProvider"
+    }
+    remote {
+      enabled-transports = ["akka.remote.netty.tcp"]
+//      log-remote-lifecycle-events = off
+      netty.tcp {
+        hostname = "192.168.6.22"
+        port = 30000
+      }
+    }
+
+    cluster {
+      seed-nodes = [
+        "akka.tcp://durian@192.168.6.22:30000"]
+
+      auto-down-unreachable-after = 10s
     }
   }
-
-  cluster {
-    seed-nodes = [
-      "akka.tcp://durian@127.0.0.1:3000"]
-
-    auto-down-unreachable-after = 10s
-  }
 }
-
-# Disable legacy metrics in akka-cluster.
-akka.cluster.metrics.enabled=off
-
-# Enable metrics extension in akka-cluster-metrics.
-akka.extensions=["akka.cluster.metrics.ClusterMetricsExtension"]
-
-# Sigar native library extract location during tests.
-# Note: use per-jvm-instance folder when running multiple jvm on one host.
-akka.cluster.metrics.native-library-extract-folder=${user.dir}/target/native
