--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -5,7 +5,7 @@ durian {
     # to STDOUT)
     loggers = ["akka.event.Logging$DefaultLogger"]
     # Options: OFF, ERROR, WARNING, INFO, DEBUG
-    loglevel = "DEBUG"
+    loglevel = "INFO"
 
     actor {
       provider = "akka.cluster.ClusterActorRefProvider"
