Refactoring the code

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,10 +1,11 @@
 
-durian {
+joel {
+  hostname = "localhost"
+  port = 10001
+
+
   akka {
-    # Loggers to register at boot time (akka.event.Logging$DefaultLogger logs
-    # to STDOUT)
     loggers = ["akka.event.Logging$DefaultLogger"]
-    # Options: OFF, ERROR, WARNING, INFO, DEBUG
     loglevel = "INFO"
 
     actor {
@@ -12,18 +13,43 @@ durian {
     }
     remote {
       enabled-transports = ["akka.remote.netty.tcp"]
-//      log-remote-lifecycle-events = off
       netty.tcp {
-        hostname = "192.168.6.22"
-        port = 30000
+        hostname = "localhost"
+        port = 30001
       }
     }
 
     cluster {
-      seed-nodes = [
-        "akka.tcp://durian@192.168.6.22:30000"]
-
+      seed-nodes = ["akka.tcp://joel@localhost:30001"]
       auto-down-unreachable-after = 10s
     }
   }
 }
+
+yang {
+  hostname = "localhost"
+  port = 10002
+
+  akka {
+    loggers = ["akka.event.Logging$DefaultLogger"]
+    loglevel = "INFO"
+
+    actor {
+      provider = "akka.cluster.ClusterActorRefProvider"
+    }
+    remote {
+      enabled-transports = ["akka.remote.netty.tcp"]
+      netty.tcp {
+        hostname = "localhost"
+        port = 30002
+      }
+    }
+
+    cluster {
+      seed-nodes = ["akka.tcp://joel@localhost:30001"]
+      auto-down-unreachable-after = 10s
+    }
+  }
+
+}
+
