add remote actor for clustering

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,6 +1,6 @@
 
 joel {
-  hostname = "localhost"
+  hostname = "192.168.5.134"
   port = 10001
 
   akka {
@@ -13,20 +13,20 @@ joel {
     remote {
       enabled-transports = ["akka.remote.netty.tcp"]
       netty.tcp {
-        hostname = "localhost"
+        hostname = "192.168.5.134"
         port = 30001
       }
     }
 
     cluster {
-      seed-nodes = ["akka.tcp://joel@localhost:30001"]
+      seed-nodes = ["akka.tcp://joel@192.168.5.134:30001"]
       auto-down-unreachable-after = 10s
     }
   }
 }
 
 yang {
-  hostname = "localhost"
+  hostname = "192.168.5.134"
   port = 10002
 
   akka {
@@ -39,13 +39,13 @@ yang {
     remote {
       enabled-transports = ["akka.remote.netty.tcp"]
       netty.tcp {
-        hostname = "localhost"
+        hostname = "192.168.5.134"
         port = 30002
       }
     }
 
     cluster {
-      seed-nodes = ["akka.tcp://joel@localhost:30001"]
+      seed-nodes = ["akka.tcp://joel@192.168.5.134:30001"]
       auto-down-unreachable-after = 10s
     }
   }
