running multiple akka server in local system

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,6 +1,6 @@
 
-joel {
-  hostname = "192.168.5.134"
+master {
+  hostname = "127.0.0.1"
   port = 10001
 
   akka {
@@ -13,13 +13,39 @@ joel {
     remote {
       enabled-transports = ["akka.remote.netty.tcp"]
       netty.tcp {
-        hostname = "192.168.5.134"
+        hostname = "127.0.0.1"
         port = 30001
       }
     }
 
     cluster {
-      seed-nodes = ["akka.tcp://joel@192.168.5.134:30001"]
+      seed-nodes = ["akka.tcp://master@127.0.0.1:30001"]
+      auto-down-unreachable-after = 10s
+    }
+  }
+}
+
+slave {
+  hostname = "127.0.0.1"
+  port = 10002
+
+  akka {
+    loggers = ["akka.event.Logging$DefaultLogger"]
+    loglevel = "INFO"
+
+    actor {
+      provider = "akka.cluster.ClusterActorRefProvider"
+    }
+    remote {
+      enabled-transports = ["akka.remote.netty.tcp"]
+      netty.tcp {
+        hostname = "127.0.0.1"
+        port = 30002
+      }
+    }
+
+    cluster {
+      seed-nodes = ["akka.tcp://master@127.0.0.1:30001"]
       auto-down-unreachable-after = 10s
     }
   }
